http://gcc.gnu.org/testresults does not exist any longer.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -839,7 +839,7 @@ HP aCC symbols.
 
 <dt><b>November 26, 1998</b></dt>
 <dd>
-A <a href="http://gcc.gnu.org/testresults/">database with test results</a>
+A database with test results
 is now available online, thanks to Marc Lehmann.
 </dd>
 
