Update the section on bounds-checking. Originally by William Bader <william@nscs.fast.net>.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -25,18 +25,19 @@ architecture.</p>
 Bounds checking patches for
 <a href="http://web.inter.NL.net/hcc/Haj.Ten.Brugge/">GCC releases</a>
 and
-<a href="ftp://nscs.fast.net/pub/binaries/boundschecking">GCC snapshots</a>
+<a href="ftp://ftp.newspapersystems.com/pub/binaries/boundschecking">GCC snapshots</a>
 </h2>
 
 <p>These patches add a <code>-fbounds-checking</code> flag that
 adds bounds checking tests to pointer and array accesses.
 Richard Jones developed the
 <a href="http://www-ala.doc.ic.ac.uk/~phjk/BoundsChecking.html">
-patches against gcc-2.7</a> in 1995.
-Herman ten Brugge is the current maintainer and has updated the patches for
-gcc-2.95.2.
-<a href="mailto:william@nscs.fast.net">William Bader</a> has unofficial
-updates for selected GCC snapshots.</p>
+patches against gcc 2.7</a> in 1995.
+<a href="http://web.inter.NL.net/hcc/Haj.Ten.Brugge/">Herman ten Brugge</a>
+is the current maintainer and has updated the patches for GCC 2.95.2 and
+later.
+<a href="http://williambader.com">William Bader</a> has
+<a href="ftp://ftp.newspapersystems.com/pub/binaries/boundschecking/">unofficial patches</a>.</p>
 
 <p>You may freely mix object modules compiled with and without bounds
 checking.  The bounds checker also includes replacements for
@@ -45,7 +46,7 @@ invalid calls against checked memory objects, even from modules
 compiled without bounds checking.</p>
 
 <p>Here is a
-<a href="ftp://nscs.fast.net/pub/binaries/boundschecking/example.html#Example">
+<a href="ftp://ftp.newspapersystems.com/pub/binaries/boundschecking/example.html#Example">
 compilation and execution</a> of an example program.</p>
 
 <h2>
