--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -18,6 +18,9 @@
   <li><a href="ftp://ftp.axis.se/pub/users/hp/pgccfd/">Porting GCC for
   Dunces</a> by Hans-Peter Nilsson &lt;<a href="mailto:hans-peter.nilsson@axis.com">hans-peter.nilsson@axis.com</a>&gt;.</li>
 
+  <li><a href="http://www.tldp.org/HOWTO/GCC-Frontend-HOWTO">GCC Frontend
+  HOWTO</a> by Sreejith K. Menon &lt;<a href="mailto:sreejithkmenon@yahoo.com">sreejithkmenon@yahoo.com</a>&gt;.</li>
+
   <li><a href="http://people.debian.org/~aaronl/Usenix88-lexic.pdf">Lexical
   Closures for C++</a> by Thomas M. Breuel, on the design and
   implementation of nested functions in GCC.</li>
@@ -28,7 +31,7 @@
   &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.</li>
 
   <li><a href="http://www.eskimo.com/~johnnyb/computers/toy/">A Toy
-  Example Language</a> by Jonathan Bartlett &lt;johnnyb@eskimo.com&gt;.</li>
+  Example Language</a> by Jonathan Bartlett &lt;<a href="mailto:johnnyb@eskimo.com">johnnyb@eskimo.com</a>&gt;.</li>
 
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.</li>
 
