Correctly spell Objective-C.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -54,15 +54,15 @@
           compiler.</li>
     </ul>
     </li>
-    <li>Inlining heuristics for C, ObjC, C++ and Java have been improved
-        significantly.  Call graph based out-of-order inlining is now
-        enabled by default at <code>-O2</code>.</li>
+    <li>Inlining heuristics for C, Objective-C, C++ and Java have been
+        improved significantly.  Call graph based out-of-order inlining
+        is now enabled by default at <code>-O2</code>.</li>
   </ul>
 
   
 <h2>New Languages and Language specific improvements</h2>
 
-<h3>C/ObjC/C++</h3>
+<h3>C/Objective-C/C++</h3>
 
   <ul>
     <li>Precompiled headers are now supported.  Precompiled headers
