--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -176,7 +176,12 @@
 	<pre>
 	template &lt;typename T&gt;
 	void f(T);</pre></li>
-		      
+
+    <li>In case of friend declarations that refer to members of a class,
+        these members need to be <code>public</code>, whereas G++ used to
+        accept <code>private</code>/<code>protected</code> members as well.
+        </li>
+ 
     <li>You must use <code>template &lt;&gt;</code> to introduce template
 	specializations, as required by the standard.  For example,
 	<pre>
@@ -205,7 +210,7 @@
         code like this:
         <pre>
         int i;
-        (char)a = 5;
+        (char) i = 5;
         </pre>
         <p>is no longer accepted.</p></li>
 
