Simplifications and shortening.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -11,8 +11,8 @@
 
 <h1>Read-write CVS access</h1>
 
-<p>We have read/write access to the CVS repository available for all
-our significant developers. Maintainers are also encouraged to <a
+<p>We have read/write access to the CVS repository available for
+significant developers. Maintainers are also encouraged to <a
 href="bugs/management.html">edit our bugs database</a>.</p>
 
 <hr />
@@ -49,20 +49,17 @@ MAINTAINERS file to test write access, following the instructions below.</p>
 <hr />
 <h2><a name="setup">Setting up your local CVS tree</a></h2>
 
-<p>Once you can login to the machine, it's trivial to start using ssh
-from your remote machine.  Set <code>CVS_RSH</code> in your
-environment to "<code>ssh</code>".  Then issue the command</p>
+<p>Once your account has been set up, check out the GCC sources by setting
+<code>CVS_RSH</code> in your environment to "<code>ssh</code>" and issuing
+the command</p>
 
 <blockquote><p><code>
 cvs -z 9 -d :ext:<i>username</i>@gcc.gnu.org:/cvs/gcc co gcc
 </code></p></blockquote>
 
-<p>where <i>username</i> is your user name at
-gcc.gnu.org.  This will check out a new CVS tree that you
-should be able to work with in the normal fashion, including
-committing changes.</p>
+<p>where <i>username</i> is your user name at gcc.gnu.org.</p>
 
-<p>It is also possible to convert an existing CVS tree to use ssh by
+<p>It is also possible to convert an existing CVS tree to use SSH by
 replacing all the "Root" files in the local tree with the following
 contents:</p>
 
