Update the status of objc-improvements-branch; describe Objective-C changes in upcoming GCC 3.4 release.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -229,7 +229,40 @@
 <h3>Objective-C</h3>
 
   <ul>
-    <li></li>
+    <li>The Objective-C front-end has been updated to include the numerous
+        bug fixes and enhancements previously available only in Apple's
+        version of GCC.  These include:
+    <ul>
+       <li>Structured exception (<code>@try</code>... <code>@catch</code>...
+           <code>@finally</code>, <code>@throw</code>) and synchronization
+           (<code>@synchronized</code>) support.  These are accessible via
+           the <code>-fobjc-exceptions</code> switch; as of this writing,
+           they may only be used in conjunction with <code>-fnext-runtime
+           </code> on Mac OS X 10.3 and later. See <a href=
+           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           >Options Controlling Objective-C Dialect</a> for more
+           information.</li>
+       <li>An overhaul of <code>@encode</code> logic.  The C99 <code>_Bool
+           </code> and C++ <code>bool</code> type may now be encoded as 
+           '<code>B</code>'. In addition, the back-end/codegen dependencies
+           have been removed.</li>
+       <li>An overhaul of message dispatch construction, ensuring that the
+           various receiver types (and casts thereof) are handled properly,
+           and that correct diagnostics are issued.</li>
+       <li>Support for "Zero-Link" (<code>-fzero-link</code>) and
+           "Fix-and-Continue" (<code>-freplace-objc-classes</code>) debugging
+           modes, currently available on Mac OS X 10.3 and later. See <a href=
+           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           >Options Controlling Objective-C Dialect</a> for more
+           information.</li>
+       <li>Access to optimized runtime entry points (<code>-fno-nil-receivers
+           </code>) on the assumption that message receivers are never <code>
+           nil</code>.  This is currently available on Mac OS X 10.3 and
+           later. See <a href=
+           "http://gcc.gnu.org/onlinedocs/gcc/Objective-C-Dialect-Options.html"
+           >Options Controlling Objective-C Dialect</a> for more
+           information.</li>
+    </ul></li>
   </ul>
 
 <h3>Java</h3>
