2003-10-05  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Declare "News/announcements" historical.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -60,13 +60,16 @@ available</a>.</p>
 
 <h2>Usage</h2>
 <p>Here is a short <a href="usage.html">explanation</a> on how to invoke and
-use the compiler once you have build it (or downloaded the binary).</p>
+use the compiler once you have built it (or downloaded the binary).</p>
 
 <h2>Suggested reading</h2>
 <p>Furter links are provided <a href="links.html">here</a>.</p>
 
 
 <h2>News/Announcements</h2>
+
+<p><i>Note: Some of the links below are no longer active</i> - this part of the
+page is preserved for historical reasons.</p>
 
 <dl>
 <dt><b>July 05, 2003</b></dt>
