--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -72,7 +72,7 @@ arc      | ???   FI B      pf m  h
 arm      |                      d a  s
 avr      |    L  FI    l  c f m       
 c4x      |  ??  N I BD       g   h te 
-cris     |   SL  F  B     c f m   a   
+cris     |   S   F  B     c f m   a   
 d30v     | ??    FIC       p  m  h   s
 dsp16xx  | ???L NFI  D l  c f m  h  e 
 fr30     | ??    FI B        gm    t s
