2003-10-07  Toon Moene  <toon@moene.indiv.nluug.nl>
	* compilerstatus.html: Fix erroneous XML header.
	* index.html: Ditto.
	* librarystatus.html: Ditto.
	* links.html: Ditto.
	* todo.html: Ditto.
	* usage.html: Ditto.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -1,9 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE html
-            PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-            "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>GNU Fortran 95 -- Free number crunching FORALL!</title>
@@ -29,6 +24,9 @@ Fortran 95 language, be it in the scientific community, in education
 or in a commercial environment.  Today, truly free Fortran 90 or
 Fortran 95 compilers do not exist.  We are trying to make one
 available to the Fortran community.</p>
+
+<p>You can reach us at
+fortran at gcc dot gnu dot org (e-mail address not active yet).
 
 
 <h2>Project goal</h2>
@@ -63,7 +61,7 @@ available</a>.</p>
 use the compiler once you have built it (or downloaded the binary).</p>
 
 <h2>Suggested reading</h2>
-<p>Furter links are provided <a href="links.html">here</a>.</p>
+<p>Further links are provided <a href="links.html">here</a>.</p>
 
 
 <h2>News/Announcements</h2>
