2003-10-07  Toon Moene  <toon@moene.indiv.nluug.nl>
	* lists.html: Add Fortran mailing list.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -71,6 +71,10 @@
   is a list for submission and discussion of patches to libgcj, the
   Java runtime.  Patches to gcj, the Java language front end, should
   go to both this list and <b>gcc-patches</b>.</li>
+
+  <li><b><a href="http://gcc.gnu.org/ml/fortran/">java</a></b>
+  is the main discussion and development list for the Fortran language
+  front end to gcc, and the corresponding runtime library.</li>
 </ul>
 
 <p>Read only lists:</p>
