--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -72,7 +72,7 @@
   Java runtime.  Patches to gcj, the Java language front end, should
   go to both this list and <b>gcc-patches</b>.</li>
 
-  <li><b><a href="http://gcc.gnu.org/ml/fortran/">java</a></b>
+  <li><b><a href="http://gcc.gnu.org/ml/fortran/">fortran</a></b>
   is the main discussion and development list for the Fortran language
   front end to gcc, and the corresponding runtime library.</li>
 </ul>
