2003-10-07  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Update Fortran mailing list information.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -25,9 +25,10 @@ or in a commercial environment.  Today, truly free Fortran 90 or
 Fortran 95 compilers do not exist.  We are trying to make one
 available to the Fortran community.</p>
 
-<p>You can reach us at
-fortran at gcc dot gnu dot org (e-mail address not active yet).
-
+<p>You can reach us at the
+<a href="mailto:fortran@gcc.gnu.org">fortran@gcc.gnu.org</a>
+mailing list.  For subscribing to the mailing list, see
+<a href="http://gcc.gnu.org/ml">this page</a>.
 
 <h2>Project goal</h2>
 <p>We strive to provide a high quality release, which we want to work
