--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -28,7 +28,7 @@ available to the Fortran community.</p>
 <p>You can reach us at the
 <a href="mailto:fortran@gcc.gnu.org">fortran@gcc.gnu.org</a>
 mailing list.  For subscribing to the mailing list, see
-<a href="http://gcc.gnu.org/ml">this page</a>.
+<a href="http://gcc.gnu.org/ml">this page</a>.</p>
 
 <h2>Project goal</h2>
 <p>We strive to provide a high quality release, which we want to work
