Further markup fixes.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -72,7 +72,7 @@ page is preserved for historical reasons.</p>
 
 <dl>
 <dt><b>July 05, 2003</b></dt>
-<dd>New x86-linux binaries have been released. Get them
+<dd>New x86 GNU/Linux binaries have been released. Get them
 <a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.
 Note these tend to get out of date fairly quicky, so it's reccommended
 that you <a href="building.html">compile your own</a> from GCC CVS if
@@ -82,7 +82,7 @@ possible.</dd>
 <dd>gcc-g95 has been integrated into the <a
 href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a> of
 the <a href="http://gcc.gnu.org/cvs.html">GCC CVS repository</a>
-(announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&forum_id=21262">here</a>). This
+(announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">here</a>). This
 branch of GCC will become part of official GCC releases by the time
 GCC 3.5 is released. This web page and our mailing list will move to <a
 href="http://gcc.gnu.org">gcc.gnu.org</a> sometime soon.</b></dd>
@@ -92,7 +92,7 @@ href="http://gcc.gnu.org">gcc.gnu.org</a> sometime soon.</b></dd>
 update your local copies and give our sources a try.</dd>
 
 <dt><b>July 05, 2003</b></dt>
-<dd>New x86-linux binaries have been released. Get them
+<dd>New x86 GNU/Linux binaries have been released. Get them
 <a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.
 These include a complete FORALL implementation and some support for internal IO,
 amongst other things.</dd>
@@ -129,7 +129,7 @@ You will need a working <a href="http://www.cygwin.com">cygwin</a> environment.<
 
 
 <dt><b>May 20, 2003</b></dt>
-<dd>New x86-linux binaries have been released. Get them
+<dd>New x86 GNU/Linux binaries have been released. Get them
 <a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.</dd>
 
 <dt><b>April 18, 2003</b></dt>
@@ -159,13 +159,14 @@ and SPREAD intrinsics.</dd>
 <dt><b>March 15, 2003</b></dt>
 <dd>G95 now has a new command line switch, <code>-fg77-calls</code>.  This makes g95
 generate code using a g77 compatible calling convention.  Character variables are
-still wrong, but other things should work ok.<br>
-New linux binaries have been uploaded.  They're available from the 
+still wrong, but other things should work ok.<br />
+New GNU/Linux binaries have been uploaded.  They're available from the 
 SourceForge <a href="http://sourceforge.net/projects/gcc-g95/" target="_top">
 Project page</a>.</dd>
 
 <dt><b>March 9, 2003</b></dt>
-<dd>Assumed shape arrays should now work properly, linux binary coming soon...</dd>	
+<dd>Assumed shape arrays should now work properly, GNU/Linux binary coming
+soon...</dd>	
 <dt><b>January 29, 2003</b></dt>
 <dd>Paul has uploaded a new statically linked executable.  It is available
 from our SourceForge <a
