Correctly upper-case GCC and GCJ, use front end instead of frontend.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -35,7 +35,7 @@
   Anything relevant to the development or testing of GCC and not
   covered by other mailing lists is suitable for discussion here.</p>
 
-  <p>All major decisions and changes, like abandoning ports or frontends,
+  <p>All major decisions and changes, like abandoning ports or front ends,
   should be announced and discussed here.  Ideally, this list should be
   sufficient to follow the major trends and important news in GCC's
   development process.</p></li>
@@ -65,16 +65,16 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/java/">java</a></b>
   is the main discussion and development list for the Java language
-  front end to gcc, and the corresponding runtime library.</li>
+  front end of GCC, and the corresponding runtime library.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/java-patches/">java-patches</a></b>
   is a list for submission and discussion of patches to libgcj, the
-  Java runtime.  Patches to gcj, the Java language front end, should
+  Java runtime.  Patches to GCJ, the Java language front end, should
   go to both this list and <b>gcc-patches</b>.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/fortran/">fortran</a></b>
   is the main discussion and development list for the Fortran language
-  front end to gcc, and the corresponding runtime library.</li>
+  front end of GCC, and the corresponding runtime library.</li>
 </ul>
 
 <p>Read only lists:</p>
