Bootstrap entries for 3.3.1:
  alpha-dec-osf4.0f
  i586-pc-linux-gnu (SuSE 8.1, glibc 2.2.5 ,kernel 2.4.19)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -26,7 +26,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Java, Ada; with tweaks):
-<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-09/msg01275.html">3.3.1</a>
 </td>
 </tr>
 
@@ -235,6 +236,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg02459.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>SuSE 8.1, glibc 2.2.5 ,kernel 2.4.19</td>
+<td>Bootstrap (C, C++, F77, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2003-09/msg00868.html">3.3.1</a>
 </td>
 </tr>
 
