Add iRATE radio.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -22,6 +22,22 @@
       <tr bgcolor="#d0d0d0" valign="top">
         <td>Project</td><td>Description</td><td>Contact</td>
       </tr>
+      <!-- iRate -->
+      <tr valign="top">
+        <td><b>iRATE radio</b></td>
+        <td><a href="http://irate.sourceforge.net/">iRATE radio</a> is a popular 
+	client/server mp3 player/downloader featuring collaborative filtering: 
+	you rate the tracks and it uses your ratings and other people's to guess 
+	what you'll like. iRATE uses GCJ together with the SWT toolkit to provide 
+	native binaries on multiple platforms, including Windows and GNU/Linux. 
+	iRATE has thousands of users, many of which use iRATE daily, making it 
+	perhaps the most widely distributed GCJ-compiled program to date.
+	</td>
+	<td>
+	Entry submitted by <a href="mailto:taras.judge@shaw.ca">Taras</a>.
+	</td>
+      </tr>       
+      <!-- End iRate -->      
       <!-- XWT -->
       <tr valign="top">
         <td><b>XWT</b></td>
