Clean up "done with GCJ" entries.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -24,8 +24,8 @@
       </tr>
       <!-- iRate -->
       <tr valign="top">
-        <td><b>iRATE radio</b></td>
-        <td><a href="http://irate.sourceforge.net/">iRATE radio</a> is a popular 
+        <td><b><a href="http://irate.sourceforge.net/">iRATE radio</a></b></td>
+        <td>iRATE radio is a popular 
 	client/server mp3 player/downloader featuring collaborative filtering: 
 	you rate the tracks and it uses your ratings and other people's to guess 
 	what you'll like. iRATE uses GCJ together with the SWT toolkit to provide 
@@ -34,13 +34,13 @@
 	perhaps the most widely distributed GCJ-compiled program to date.
 	</td>
 	<td>
-	Entry submitted by <a href="mailto:taras.judge@shaw.ca">Taras</a>.
+	Submitted by <a href="mailto:taras.judge@shaw.ca">Taras</a>.
 	</td>
       </tr>       
       <!-- End iRate -->      
       <!-- XWT -->
       <tr valign="top">
-        <td><b>XWT</b></td>
+        <td><b><a href="http://www.xwt.org">XWT</a></b></td>
 
         <td>XWT is the XML Windowing Toolkit. It lets you write remote
         applications -- applications that run on a server, yet can
@@ -50,9 +50,7 @@
         an ActiveX control.
 	</td>
 
-	<td>The <a href="http://www.xwt.org">XWT</a> home page.
-        <a href="http://gcc.gnu.org/ml/java/2002-01/msg00101.html">
-	Entry</a> submitted by <a href="mailto:gcj@lists.megacz.com">
+	<td>Submitted by <a href="mailto:gcj@lists.megacz.com">
 	Adam Megacz</a>.
 	</td>
       </tr>       
@@ -71,7 +69,7 @@
       <!-- End Autonomous Haulage -->
       <!-- jUSB/jPhoto -->
       <tr valign="top">
-        <td><b>jUSB/jPhoto</b></td>
+        <td><b><a href="http://jusb.sourceforge.net">jUSB</a>/<a href="http://jphoto.sourceforge.net">jPhoto</a></b></td>
 
 	<td>jUSB is an open source Java API for USB, with an
 	    implementation that runs on recent GNU/Linux OS
@@ -81,12 +79,8 @@
 	    the digital camera protocol on top of jUSB.  The protocol is the
 	    new USB standard for talking to such devices called PTP.
 	</td>
-
-	<td>The <a href="http://jusb.sourceforge.net">jUSB</a>
-	     page. The <a href="http://jphoto.sourceforge.net">JPhoto</a>
-	     page.  <a href="http://gcc.gnu.org/ml/java/2000-11/msg00112.html">Entry</a>
-	     submitted by <a href="mailto:david-b@pacbell.net">David
-	     Brownell</a>.
+	<td>
+	Submitted by <a href="mailto:david-b@pacbell.net">David Brownell</a>.
 	</td>
       </tr>
       <!-- End jUSB/jPhoto -->
@@ -112,7 +106,7 @@
       <!-- End PAL -->
       <!-- Swarm -->
       <tr valign="top">
-        <td><b>Swarm</b></td>
+        <td><b><a href="http://www.swarm.org">Swarm</a></b></td>
 
 	<td>Swarm is a fine-grained distributed discrete event
 	    simulator.  Swarm is mainly used for agent-based
@@ -125,15 +119,15 @@
 	    with gcj support.  On Intel Debian 2.2, up to 30%
 	    performance gains over Kaffe's jit3 were witnessed.
 	 </td>
-	 <td><a href="http://www.swarm.org">Swarm</a>. 
-	     <a href="http://gcc.gnu.org/ml/java/2000-06/msg00084.html">Entry</a> 
-	     submitted by <a href="mailto:mgd@swarm.org">Marcus G. Daniel</a>.
+	 <td>
+	 Submitted by <a href="mailto:mgd@swarm.org">Marcus G. Daniel</a>.
 	 </td>
       </tr>
       <!-- End Swarm -->
       <!-- Tamanoir -->
       <tr valign="top">
-        <td><b>Tamanoir</b></td>
+        <td><b><a href="http://www.ens-lyon.fr/~jpgelas/TAMANOIR/">
+	Tamanoir</a></b></td>
 	<td>Tamanoir system is a complete framework that allows users
 	    to easily deploy and maintain distributed active routers
 	    on wide area networks. In the rapidly expanding field of
@@ -144,10 +138,7 @@
 	    portability of services. It's written in Java and
 	    standardly built using gcj.
 	</td>
-	<td>The <a
-	    href="http://www.ens-lyon.fr/~jpgelas/TAMANOIR/">Tamanoir</a>
-	    page. <a href="http://gcc.gnu.org/ml/java/2001-01/msg00069.html">
-	    Entry</a> submitted by
+	<td>Submitted by
             <a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick
             Gelas</a>.
 	</td>
@@ -172,36 +163,31 @@
       <!-- End Fluid Dynamics -->
       <!-- rhug -->
       <tr valign="top">
-        <td><b>rhug</b></td>
+        <td><b><a href="http://sources.redhat.com/rhug/">rhug</a></b></td>
 	<td>Anthony Green and friends have set up rhug, a collection
 	    of free software Java packages set up to build with gcj.
 	    Both sources and RPMs are available.
 	</td>
-	<td>The <a href="http://sources.redhat.com/rhug/">rhug</a>
-	    page.
+	<td><a href="mailto:green@redhat.com">Anthony Green</a>
 	</td>
       </tr>
       <!-- End rhug -->
       <!-- WebMiel -->
       <tr valign="top">
-        <td><b>WebMiel</b></td>
+        <td><b><a href="http://www.webmiel.fr/">WebMiel</a></b></td>
 	<td>Christophe Roux has been working on software for
 	    community communications over http.  This program,
 	    WebMiel, uses Tomcat and has been working with gcj since
 	    mid-2002.  The documentation is in French.
 	</td>
-	<td>The <a href="http://www.webmiel.fr/">WebMiel</a>
-	    page.  <a
-	    href="http://gcc.gnu.org/ml/java/2002-11/msg00456.html">Entry</a>
-	    submitted by <a
-	    href="mailto:ch_roux@club-internet.fr">Christophe
-	    Roux</a>.
+	<td>Submitted by <a
+	    href="mailto:ch_roux@club-internet.fr">Christophe Roux</a>.
 	</td>
       </tr>
       <!-- End WebMiel -->
      <!-- Freestyler -->
       <tr valign="top">
-        <td><b>The Freestyler Toolkit</b></td>
+        <td><b><a href="http://www.freestyler-toolkit.org/">Freestyler Toolkit</a></b></td>
 
 	<td>The Freestyler Toolkit facilitates building with GCJ. 
 		It focuses on simplifying the construction of 
@@ -210,10 +196,9 @@
 		backends. 
 		<a
 href="http://www.freestyler-toolkit.org/freestyler/linux-kerneled-Gtk2.html#linux-ke
-rneled%2fGtk2"		>Screenshots</a> are here.
+rneled%2fGtk2">Screenshots</a> are here.
 	</td>
-	<td>The <a href="http://www.freestyler-toolkit.org/">WebMiel</a>
-	    page.  Entry submitted by <a
+	<td>Submitted by <a
 	    href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>.
 	</td>
       </tr>
